--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.484.0",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-router-dom": "^7.4.0",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
