--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "react": "^19.0.0",
